# seo_agent

./: README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: .env  chat.py  index.py  requirements.txt
functions/: requirements.txt
public/: index.html  script.js  style.css
