[project]
name = "seo-chatbot-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "openai-agents>=0.2.6",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
]
